# mpooler

./: .gitignore  README.md  alembic.ini  main.py  main_window.py  mvp.py  pyproject.toml  pytest.ini
data/: base.py  db.py
data/orm/: __init__.py  card.py  deck.py  location.py  types.py
data/repositories/: base.py
migrations/: env.py
migrations/versions/: b6a8d05e8b5a_initial_schema.py
models/: card.py  color.py  color_set.py  condition.py  deck.py  location.py  location_type.py
tests/: conftest.py
tests/smoke/: test_main_window_smoke.py
ui/: base_collection_panel.py  collection_tab.py  location_panel.py  main_window.py  scanner_tab.py  sidebar.py
